2006-12-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-default-method): Before setting to "pscp", check
	whether package password.el is loaded, or Pageant is running.

2006-12-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Add "ControlPath" and "ControlMaster"
	to scp, scp1 and scp2 methods.  Suggested by Andreas Schwab
	<schwab@suse.de>.
	(tramp-do-copy-or-rename-file-out-of-band)
	(tramp-open-connection-rsh): Compute format spec for ?t.
	(tramp-process-actions): Trace command parameters.

2006-11-24  Lars Hansen  <larsh@soem.dk>

	* tramp.el (tramp-default-method): Under Windows, change from
	plink to pscp.
	(tramp-copy-failed-regexp, tramp-action-copy-failed): Add.
	(tramp-actions-copy-out-of-band):
	Add pair (tramp-copy-failed-regexp tramp-action-copy-failed).
	(tramp-action-out-of-band): Move "Permission denied" handling to
	tramp-action-copy-failed.
	(tramp-do-copy-or-rename-file-out-of-band): unwind-protect killing of
	process buffer.

2006-11-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-yn-prompt-regexp): Fix regexp.

2006-11-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): cl and custom are always required.

2006-11-11  Glenn Morris  <rgm@gnu.org>

	* tramp.el (tramp-unified-filenames): Improve previous doc fix.

2006-11-10  Glenn Morris  <rgm@gnu.org>

	* tramp.el (tramp-unified-filenames): Doc fix (Nil -> nil).

2006-11-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-default-method): scp is the default method.

2006-11-05  Lars Hansen  <larsh@soem.dk>

	* tramp.el (with-parsed-tramp-file-name): Correct debug spec.
	Highlight as keyword.
	(tramp-do-copy-or-rename-file): Correct data for
	'file-already-exists.  Don't call tramp-method-out-of-band-p for
	local files.
	(tramp-touch): Quote file name.

2006-10-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-yn-prompt-regexp): Add question from plink.